syntax = "proto3";

package discovery;

service Discovery {
    rpc RegisterService(RegisterServiceRequest) returns (RegisterServiceResponse);
    rpc UnregisterService(UnregisterServiceRequest) returns (UnregisterServiceResponse);
    rpc KeepAlive(KeepAliveRequest) returns (KeepAliveResponse);
}

message ServiceID {
    string instance = 1;
    string service_type = 2;
    string service_name = 3;
}

message RegisterServiceRequest {
    ServiceID service_id = 1;
    string hostname = 2;
    int32 port = 3;
    uint32 ttl = 4;
    repeated Metadata metadata = 15;
}

message RegisterServiceResponse {
    bool ok = 1;
}

message UnregisterServiceRequest {
    ServiceID service_id = 1;
}

message UnregisterServiceResponse {
    bool ok = 1;
}

message KeepAliveRequest {
    ServiceID service_id = 1;
}

message KeepAliveResponse {
    bool ok = 1;
}

message Metadata {
    string key = 1;
    string value = 2;
}
